<resources>
    <string name="app_name">GastoViagem</string>
    <string name="distancia">Distância</string>
    <string name="total_km">Total de quilômetros</string>
    <string name="preco">Preço</string>
    <string name="ppl">Preço Por Litro</string>
    <string name="autonomia">Autonomia</string>
    <string name="kms_por_litro">KMs por Litro</string>
    <string name="gasto_total">SEU GASTO TOTAL SERÁ DE:</string>
    <string name="calcular">CALCULAR</string>
</resources>